# SimReg

./: Makefile  README  configure  configure.ac  run-mcreg.sh  simreg  simreg.cpp
autom4te.cache/: output.0  requests  traces.0
include/: current_time.cpp  current_time.h  extract_obsCounts.cpp  extract_obsCounts.h  extract_obsRC.cpp  extract_obsRC.h  extract_observed_RC_CC.cpp  extract_observed_RC_CC.h  loadSam.cpp  loadSam.h  load_obsCounts.cpp  load_obsCounts.h  norm.cpp  norm.h  normD.cpp  normD.h  prepro_extract_read_classes_cc.cpp  prepro_extract_read_classes_cc.h  print.cpp  print.h
lib/: MCReg_CC_v1  MCReg_CC_v1.cpp  MCReg_CC_v2  MCReg_CC_v2.cpp  MCReg_CC_v2_copy  MCReg_CC_v2_copy.cpp  Makefile.am  combineFiles  combineFiles.cpp  compute-freq  compute-freq-42t  compute-freq-42t.cpp  compute-freq.cpp  compute-nextCounts  compute-nextCounts.cpp  compute-nextCounts2  compute-nextCounts2.cpp  computeTrFreq  computeTrFreq.cpp  compute_RC_CC_v2  compute_RC_CC_v2.cpp  compute_obsRC_CC  compute_obsRC_CC.cpp  compute_obsRC_CC.cpp.backup  compute_obsRC_CC_Counts  compute_obsRC_CC_Counts.cpp  compute_sRC_d  compute_sRC_d.cpp  compute_simCounts  compute_simCounts.cpp
scripts/: MCReg.sh  MCReg_copy.sh  compute-correlation.sh  convert-iso-to-genome-coords  correl.py  extractTrLen.awk  list1.txt  makeCC.sh  makeCC_obsCounts.sh  mpe.py  qp_v3.py  simReg.sh  simReg_cc.sh  tperg.awk
testbench/: 2MAQC_Genes.2.ebwt  2MAQC_Genes.3.ebwt  2MAQC_Genes.4.ebwt  2MAQC_Genes.fa  2MAQC_Genes.gtf  2MAQC_Genes.rev.2.ebwt  MCReg.iso.estimates  README.txt
utils/: cmp_col_2files.awk  (+61 more)
(+86 files in other folders)
